# faucet

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  handlers.rs  main.rs  ratelimit.rs  signer.rs
