[package]
name = "ligate-faucet"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Devnet faucet for Ligate Chain. Rate-limited $LGT drip from a hot signer key."
repository = "https://github.com/ligate-io/faucet"
homepage = "https://ligate.io"
authors = ["Ligate Labs <hello@ligate.io>"]
rust-version = "1.93"
publish = false

[[bin]]
name = "ligate-faucet"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# JSON + config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Rate limiting (in-memory)
dashmap = "6"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Hex encoding for signer key
hex = "0.4"

# Borsh for transaction encoding
borsh = { version = "1", features = ["derive"] }

# Chain-side crates (git deps until upstream SDK lands on crates.io,
# tracked in chain repo #235). All pinned to the same chain-repo
# tag so they're version-coherent.
ligate-client = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main", features = ["submit"] }
ligate-stf    = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main", features = ["native"] }
ligate-rollup = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main" }

# Sovereign SDK pieces we directly construct (chain crates re-export
# would be cleaner, but for v0 just depend on them).
sov-bank        = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779", features = ["native"] }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779", features = ["native"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
